...
                    </view>
                    <navigationItem key="navigationItem" id="mUh-Mn-uT8">
                        <barButtonItem key="backBarButtonItem" title="Home" id="F7o-p3-nJb"/>
                    </navigationItem>
                    <nil key="simulatedTopBarMetrics"/>
...
                                <segments>
                                    <segment title="Today"/>
                                    <segment title="This Week"/>
                                    <segment title="Weekly"/>
                                </segments>
                                <connections>
...
        <scene sceneID="Fd9-1f-IsQ">
            <objects>
                <viewController title="Allowance" id="ggd-tN-XOX" customClass="AllowanceViewController" customModule="KKid" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="4us-gd-djE">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
...
        <scene sceneID="auY-gY-STn">
            <objects>
                <viewController title="Add Transaction" id="gOQ-xA-rMA" customClass="AllowanceAddTransactionViewController" customModule="KKid" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="s1d-Sn-qgG">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="804"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Allowance Transactions" id="PJr-JH-wu5"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="w2P-GL-ajI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
        <scene sceneID="QRD-8P-9PC">
            <objects>
                <viewController title="Login" id="gmx-L3-9ty" customClass="LoginViewController" customModule="KKid" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="iJT-if-3uI">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
...
                                        <rect key="frame" x="0.0" y="192" width="300" height="53.5"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qhh-a8-QRd">
                                                <rect key="frame" x="0.0" y="0.0" width="300" height="19.5"/>
                                                <fontDescription key="fontDescription" name="QDBetterComicSans" family="QDBetterComicSans" pointSize="17"/>
...
                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="avatar"/>
                                <connections>
                                    <action selector="pressedAvatarButton" destination="bIp-bl-Hiz" eventType="touchUpInside" id="chw-cD-vEF"/>
...
                                <color key="backgroundColor" systemColor="systemGray2Color"/>
                                <segments>
                                    <segment title="Search"/>
                                    <segment title="Favorites"/>
                                    <segment title="Watch List"/>
                                </segments>
                                <color key="selectedSegmentTintColor" systemColor="systemGrayColor"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Movies DB" id="1n8-xh-gc0">
                        <barButtonItem key="backBarButtonItem" title="Back" id="ZLF-0s-OgB"/>
                        <barButtonItem key="rightBarButtonItem" title="Item" id="8ef-Cc-rSR">
                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="dN8-7n-aA1">
...
                            <rect key="frame" x="105.5" y="0.0" width="190.5" height="44"/>
                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            <state key="normal" image="tmdb"/>
                        </button>
                        <barButtonItem key="rightBarButtonItem" id="Edt-OQ-zUI">
...
        <scene sceneID="bd7-SR-4LW">
            <objects>
                <viewController title="Wish List" id="XTd-pq-xbK" customClass="WishListViewController" customModule="KKid" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="EjD-0M-Ral">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
...
