...
    @IBOutlet weak var labelSwitchUser: UILabel!

    // MARK: Timer
    var timer: Timer?

// MARK: Parameters
    var modules: [KKid_Module] = [KKid_Module.init(title: "Logout", segue: nil, icon: UIImage(named: "icons8-swirl")!, getRemoteIcon: true, remoteIconName: "icons8-shutdown-80.png")]
    let dayOfWeek: Int = getDayOfWeek() ?? 0
    var choreCount: Int = 0
    let iconCache = ImageCache(name: "iconCache")
    let gravatarCache = ImageCache(name: "gravatarCache")
    var isKiosk: Bool = false
    var userSelected: Bool = false
...
// MARK: buildModules
    @objc func buildModules() {
        if let selectedUser = LoggedInUser.selectedUser {
            modules = [KKid_Module.init(title: "Logout", segue: nil, icon: UIImage(named: "icons8-swirl")!, getRemoteIcon: true, remoteIconName: "icons8-shutdown-80.png")]

            if selectedUser.enableChores {
                modules.append(KKid_Module.init(title: "Chores", segue: "segueChores", icon: UIImage(named: "icons8-swirl")!, getRemoteIcon: true, remoteIconName: "icons8-to-do-80.png"))
            }

            if selectedUser.enableAllowance {
                modules.append(KKid_Module.init(title: "Allowance", segue: "segueAllowance", icon: UIImage(named: "icons8-swirl")!, getRemoteIcon: true, remoteIconName: "icons8-allowance-64.png"))
            }

...
            }

            if selectedUser.enableWishList {
                modules.append(KKid_Module.init(title: "Wish List", segue: "segueWishList", icon: UIImage(named: "icons8-swirl")!, getRemoteIcon: true, remoteIconName: "icons8-christmas-gift-96.png"))
            }
            if !isKiosk {
                modules.append(KKid_Module.init(title: "Edit Profile", segue: "segueEditProfile", icon: UIImage(named: "icons8-swirl")!, getRemoteIcon: true, remoteIconName: "icons8-profile-80.png"))

                modules.append(KKid_Module.init(title: "App Settings", segue: nil, icon: UIImage(named: "icons8-swirl")!, getRemoteIcon: true, remoteIconName: "icons8-gear-96.png"))

                modules.append(KKid_Module.init(title: "User Manual", segue: nil, icon: UIImage(named: "icons8-swirl")!, getRemoteIcon: true, remoteIconName: "icons8-user_manual-100.png"))

                modules.append(KKid_Module.init(title: "Portal", segue: nil, icon: UIImage(named: "icons8-swirl")!, getRemoteIcon: true, remoteIconName: "letter_k/k_cloud.png"))
...
