...
// MARK: pressedShare
    @IBAction func pressedShare(_ sender: Any) {
        guard LoggedInUser.user!.isAdmin else {
            shareLink()
            return
        }
        let alert = UIAlertController(title: "Share Wish List", message: "Which List would you like to share?", preferredStyle: .actionSheet)

        alert.addAction(UIAlertAction(title: LoggedInUser.selectedUser!.firstName, style: .default , handler: { (_)in
            KumpeHelpers.Logger.log(.action, "Selected Share User")
            self.shareLink()
           }))

        alert.addAction(UIAlertAction(title: "Household (all users)", style: .destructive , handler: { (_)in
            KumpeHelpers.Logger.log(.action, "Selected Share Household")
            self.shareLink(user: LoggedInUser.user!, scope: .wishListAdmin)
           }))

        alert.addAction(UIAlertAction(title: "Cancel", style: .cancel , handler: { (_)in
            KumpeHelpers.Logger.log(.action, "Selected Cancel")
...
